# smoth-game-engine

./: .clang-format  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/source/: Application.cpp  Application.h  Engine.cpp  Engine.h
source/: constants.h  font_map.h  game.cpp  game.h  main.cpp  shaders.h  structures.h
